# FakeUSB

./: .gitignore  README.md  keyboardConf  mass-storageConf  mouseConf
attack/: ig  keyboard  keyboardAttack  keyboardAttackOld  mouse  mouseAttack  multimedia
config/: keyboardConf  mass-storageConf  mouseConf
config/DeviceConfig/: ethernetConfig  mouseConf
config/DeviceConfig/keyboard/config0/: config
config/DeviceConfig/keyboard/config0/iface0/: ep0
config/keyboard/: device  manufacturer
config/keyboard/config0/: config
config/keyboard/config0/iface0/: hidDesc
config/keyboard/config0/iface1/: ep0  hidDesc  hidReport  iface
config/mass-storage/: device  product  scsiDeviceInfo  scsiModePages  serialNumber
config/mass-storage/config0/: config
config/mass-storage/config0/iface0/: ep0  ep1  iface
config/mouse/: device  manufacturer  product  stringConf
config/mouse/config0/: config  epConfig
config/mouse/config0/iface0/: ep0  hidDesc  iface
config/multimedia/: product
config/multimedia/config0/: epConfig
config/multimedia/config0/iface0/: iface
config/multimedia/config0/iface1/: ep0  hidReport  iface
src/: CMakeLists.txt
src/Plugins/: CMakeLists.txt
src/Plugins/Devices/: CMakeLists.txt  DeviceProxy_Emulation.cpp  DeviceProxy_Emulation.h
src/Plugins/Hosts/: CMakeLists.txt  HostProxy_GadgetFS.cpp  HostProxy_GadgetFS.h
src/lib/: Attack.cpp  Attack.h  AttackFactory.cpp  AttackFactory.h  AttackFactory.hpp  AttackHID.cpp  AttackHID.h  AttackHIDKeyboard.cpp  AttackHIDKeyboard.h  AttackHIDMouse.cpp  AttackHIDMouse.h  AttackHIDMultimedia.cpp  AttackHIDMultimedia.h  AttackMassStorage.cpp  AttackMassStorage.h  CMakeLists.txt  Command.cpp  Command.h  CommandClick.cpp  CommandClick.h  CommandDelay.cpp  CommandDelay.h  CommandFactory.hpp  CommandMove.cpp  CommandMove.h  CommandMoveAndClick.cpp  CommandMoveAndClick.h  CommandPressKeys.cpp  CommandPressKeys.h  CommandPresskeys.cpp  CommandPresskeys.h  CommandWrite.cpp  CommandWrite.h  Device.cpp  Device.h  DeviceProxy.h  EmulatedDevice.cpp  EmulatedDevice.h  Factory.cpp  Factory.h  (+18 more)
src/tools/: CMakeLists.txt  anti-usbcheckin.cpp
